# augratin

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE-DESCRIPTION.md  README.md  augratin.py  dialog.ui  linux.spec  pyproject.toml  rebuild.bat  rebuild.sh  requirements.txt  version.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: desktop-lite-debian.sh
.github/: FUNDING.yml
augratin/: __main__.py
augratin/data/: dialog.ui
augratin/lib/: cat_interface.py  omnirig_interface.py  udp_broadcast.py  version.py
install_icon/: install.sh  k6gte-augratin.desktop  uninstall.sh
lib/: version.py
