[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "augratin" 
version = "23.3.7"
description = "An aid for POTA hunters"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Michael Bridak", email="michael.bridak@gmail.com" },
]
dependencies = [
    "PyQt5",
    "PyQtWebEngine",
    "requests",
    "psutil",
    "folium",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Topic :: Communications :: Ham Radio",
]

[project.urls]
"Homepage" = "https://github.com/mbridak/augratin"
"Bug Tracker" = "https://github.com/mbridak/augratin/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"augratin.data" = ["*.ui", "*.ttf", "*.desktop", "*.png",]

[project.scripts]
augratin = "augratin.__main__:run"
